--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -47,6 +47,9 @@
 							<li>
 								<a href="/blog/">Blog</a>
 							</li>
+							<li>
+								<a href="/projects/">Projects</a>
+							</li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right" style="font-size: 1.5em">
 							<li>
@@ -54,8 +57,12 @@
 									<i class="fa fa-lg fa-github"></i></a>
 							</li>
 							<li>
-								<a href="http://twitter.com/sidkuma24" target="_blank">
-									<i class="fa fa-lg fa-twitter"></i></a>
+								<a href="https://www.linkedin.com/in/siddharthkumar24/" target="_blank">
+									<i class="fa fa-lg fa-linkedin"></i></a>
+							</li>
+							<li>
+								<a href="https://www.facebook.com/sidkuma24" target="_blank">
+									<i class="fa fa-lg fa-facebook"></i></a>
 							</li>
              
               <!-- <li>
