--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -5,7 +5,7 @@ layout: base
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
-      <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Siddharth Kumar</div>
+      <div style='font-size: 2em; color: #0055A2; font-weight: bold; padding-bottom: 0.3em;'>Siddharth Kumar</div>
       <div style='font-size: 1.2em;'>
         Graduate Student
       </div>
@@ -17,7 +17,7 @@ layout: base
       </div>
       <br/>
 
-     <!-- <div style="padding: 0.3em; background-color: #4582ec; display: inline-block; border-radius: 4px; font-size: 1.2em;">
+     <!-- <div style="padding: 0.3em; background-color: #0055A2; display: inline-block; border-radius: 4px; font-size: 1.2em;">
         <a href="data/cv.pdf" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="fa fa-download"></i>
         </a>
