removed redundant files

--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -4,28 +4,18 @@ layout: base
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
+    <div class="col-md-6 col-md-offset-3 idxHdr">
       <div style='font-size: 2em; color: #0055A2; font-weight: bold; padding-bottom: 0.3em;'>Siddharth Kumar</div>
-      <div style='font-size: 1.2em;'>
-        Graduate Student
-      </div>
-      <div style='font-size: 1.2em'>
-        <a href="http://www.sjsu.edu/cs/">Computer Science</a>
-      </div>
-      <div style='font-size: 1.2em'>
-        <a href="http://www.sjsu.edu/">San Jose State University</a>
-      </div>
+      <div style='font-size: 1em;'>Graduate Student | <a href="http://www.sjsu.edu/cs/">Computer Science</a></div>
+      <div style='font-size: 1em'><a href="http://www.sjsu.edu/">San Jose State University</a></div>
       <br/>
 
-     <!-- <div style="padding: 0.3em; background-color: #0055A2; display: inline-block; border-radius: 4px; font-size: 1.2em;">
-        <a href="data/cv.pdf" target='_blank' style='text-decoration: none;'>
+     <div style="padding: 0.3em; background-color: #0055A2; display: inline-block; border-radius: 4px; font-size: 1.2em;">
+       <a href="data/KumarSiddharthResume.pdf" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="fa fa-download"></i>
-        </a>
-        <a href="https://github.com/bamos/cv" target='_blank' style='text-decoration: none;'>
-          <i style='color: white' class="fa fa-code-fork"></i>
-        </a>
+        </a> 
         <a href="data/KumarSiddharthResume.pdf" target='_blank' style='color: white; text-decoration: none;'>CV</a>
-      </div> -->
+      </div> 
 
       <ul class="list-inline idxIcons" style='font-size: 1.9em; margin-top: 0.5em;'>
         <li>
