--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -18,11 +18,21 @@
   <script type="text/javascript" src="/vendor/js/jquery.min.js"></script>
   <script type="text/javascript" src="/vendor/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/vendor/js/jquery.toc.js"></script>
+
+    <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#311e3e">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#311e3e">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#311e3e">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   
 </head>
 <body>
 	<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #5f5f5f">
       <div class="container">
         <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -65,31 +75,6 @@
 
   {{ content }}
 
-{% if page.comments %} 
-
-<div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://sidkuma24-github-io.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
-
-{% endif %}
 <!-- 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
