--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #5f5f5f">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #24292e">
       <div class="container">
         <div class="row">
         <div class="col-md-10 col-md-offset-1">
