--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -40,13 +40,13 @@ layout: base
         </li>
       </ul>
     </div>
-    <div class="col-md-2 vcenter idxHdr">
+    <!--<div class="col-md-2 vcenter idxHdr">
       <a href="/images/me-large.png">
-        <!--<img src="/images/me.png"
+        <img src="/images/me.png"
              style="border-radius: 20px; margin: 10px; max-width: none;"
-             alt="Me."/> -->
+             alt="Me."/>
       </a>
-    </div>
+    </div> -->
   </div>
 
   <div class="row">
