added Drift chatbot

--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -14,7 +14,7 @@ layout: base
        <a href="data/KumarSiddharthResume.pdf" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="fa fa-download"></i>
         </a> 
-        <a href="data/KumarSiddharthResume.pdf" target='_blank' style='color: white; text-decoration: none;'>CV</a>
+        <a href="data/Resume.pdf" target='_blank' style='color: white; text-decoration: none;'>CV</a>
       </div> 
 
       <ul class="list-inline idxIcons" style='font-size: 1.9em; margin-top: 0.5em;'>
@@ -40,13 +40,13 @@ layout: base
         </li>
       </ul>
     </div>
-    <!--<div class="col-md-2 vcenter idxHdr">
-      <a href="/images/me-large.png">
-        <img src="/images/me.png"
-             style="border-radius: 20px; margin: 10px; max-width: none;"
+    <!-- <div class="col-md-2 vcenter idxHdr">
+      <a href="data/images/my-dp.png">
+        <img src="data/images/my-dp.jpg"
+             style="border-radius: 20px; margin: 10px; max-width: 150px;"
              alt="Me."/>
       </a>
-    </div> -->
+    </div>  -->
   </div>
 
   <div class="row">
