--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -11,7 +11,7 @@ layout: base
       <br/>
 
      <div style="padding: 0.3em; background-color: #0055A2; display: inline-block; border-radius: 4px; font-size: 1.2em;">
-       <a href="data/KumarSiddharthResume.pdf" target='_blank' style='text-decoration: none;'>
+       <a href="data/Resume.pdf" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="fa fa-download"></i>
         </a> 
         <a href="data/Resume.pdf" target='_blank' style='color: white; text-decoration: none;'>CV</a>
