--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -64,17 +64,34 @@ drift.load('xe5kgw3aymui');
 <!-- End of Async Drift Code -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script type="text/javascript">
-  var app = angular.module("jobsList",[]);
-  app.controller("jobsListController", function($scope) {
-    $scope.jobs = {
-      "Company" : "Amazon",
-      "Job ID" : "001001",
-      "Job Title" : "SDE",
+<!-- Start of Async Drift Code -->
+<script>
+"use strict";
 
-    }
-  });
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
+      };
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('kb5stxu6na9e');
 </script>
+<!-- End of Async Drift Code -->
   
 </head>
 <body>
