updated home page

--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -3,8 +3,16 @@ layout: base
 ---
 
 <div class="container">
+
   <div class="row">
-    <div class="col-md-6 col-md-offset-3 idxHdr">
+    <div class="col-md-2 col-md-offset-2 vcenter idxHdr">
+      <a href="/  data/images/my-dp.png">
+        <img src="/data/images/my-dp.jpg"
+             style="border-radius: 20px; margin: 10px; max-width: 250px;"
+             alt="Me."/>
+      </a>
+    </div> 
+    <div class="col-md-6 vcenter idxHdr">
       <div style='font-size: 2em; color: #0055A2; font-weight: bold; padding-bottom: 0.3em;'>Siddharth Kumar</div>
       <div style='font-size: 1em;'>Graduate Student | <a href="http://www.sjsu.edu/cs/">Computer Science</a></div>
       <div style='font-size: 1em'><a href="http://www.sjsu.edu/">San Jose State University</a></div>
@@ -40,13 +48,7 @@ layout: base
         </li>
       </ul>
     </div>
-    <!-- <div class="col-md-2 vcenter idxHdr">
-      <a href="data/images/my-dp.png">
-        <img src="data/images/my-dp.jpg"
-             style="border-radius: 20px; margin: 10px; max-width: 150px;"
-             alt="Me."/>
-      </a>
-    </div>  -->
+    
   </div>
 
   <div class="row">
