--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -108,7 +108,12 @@ drift.load('kb5stxu6na9e');
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/" style="font-size: 1.5em">Siddharth Kumar</a>
+          <a class="navbar-brand" href="/" style="font-size: 1.5em">
+            <div>
+              <img src="/data/images/my-dp.jpg" style="max-width: 40px;" class="img-circle"></img>
+              Siddharth Kumar
+            </div>
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
